public/stylesheets/reset.css
body {
  padding: 50px;
  font: 14px "Nunito", Helvetica, Arial, sans-serif;
}
a {
  color: #00B7FF;
}
* {
  box-sizing: border-box;
}
h1, h2, h3, h4, h5, h6, a, ol, li, ul, div, span,
body, header, nav {
  font-size: 1rem;
  color: inherit;
  background-color: transparent;
  margin: 0;
  padding: 0;
  outline: 0;
  font-weight: normal;
}
h1 {
  font-size: 2rem;
}

.nav-container{
  padding-bottom: -1px;
  overflow: hidden;
  background-color: #ef8354;
  position: sticky;
  top: 0px;
}

.nav-container__contents {
  display: flex;
  align-items: flex-end;
  flex-direction: row;
  justify-content: space-between;
}

.logo-img{
  height: 101px;
  width: 101px;
  margin-right: 100px;
  float:left;
  padding:10px;
}
.logo-img:hover{
  transition: 0.55s ease-in-out;
  background-color: #293241ff;
  transform: scaleX(-1);
}
.nav-item{
  display:inline-flex;
  padding: 15px 16px;
  background-color: #ef8354;
}
.nav-link{
  color: #ffffff;
  text-align: center;
  text-decoration: none;
}
.nav-link:hover{
  background-color: #293241ff ;
  color: #ef8354;
  transition: 0.4s ease;
}
.form-container{
  box-sizing: border-box;
  border-radius: 5px;
  padding:20px;
}
.form-label,
.form-control{
  float: left;
  width: 75%;
  margin-top: 6px;
}
.form-control{
  border: 1px solid #ccc;
  border-radius: 4px;
}
.signup-button{
  background-color: #2d3142;
  border: none;
  border-radius: 4px;
  box-shadow: 0 9px rgb(122, 122, 122);
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: flex;
  font-size: 16px;
  transition-duration: 0.4s;
}
.signup-button:hover{
  background-color: #4f5d75;
}
.signup-button:active{
  background-color: #4f5d75;
  box-shadow:0 9px rgb(122, 122, 122);
  transform: translateY(4px);
}
.signup-form-link>a{
  display:flex;
  margin-top:12px;
  padding: 14px 16px;
  text-align:center;
  text-decoration: none;
}
.signup-form-link>a:hover{
  color:blue;
}
.navbar-sameLine {
  position: relative;
  display: flex;
  flex-direction: row;
  align-items: flex-end;
}

.login-status {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  padding-right: 20px;
}

#logged-in-message {
  color: #293241ff;
  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
  font-weight: 600;
  text-align:right;
  padding-right: 20px;
}

#logged-in-icon {
  align-items: center;
  width: 30px;
  height: 30px;
  box-shadow: 3px -2px 5px #4f5d75;
  border-radius: 10px;
}

